[package]
name = "authorization"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
axum = "0.7.9"
serde = "1.0.215"
serde_json = "1.0.133"
jwt = "0.16.0"
redis = { version = "0.27.5", features = ["aio", "tokio-comp"] }
hmac = "0.12.1"
sha2 = "0.10.8"
uuid = { version = "1.11.0", features = ["serde", "v6"] }
dotenvy = "0.15.7"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing-subscriber = "0.3.19"